# empty-project

./: .bazelrc  BUILD.bazel  Cargo.toml  WORKSPACE.bazel  app.cc  app.h  app_shell.py  application.cc
ajson/: document.h  reflect.h
examples/basic/: BUILD.bazel
examples/pyext/: BUILD.bazel  strsum.rs  strsum_test.py
examples/pygui/: BUILD.bazel  app.rs  app_shell.py
proto/: BUILD.bazel  example.proto  python_support.cc  python_support.h
rules/: pyext.bzl
