load("@rules_python//python:proto.bzl", "py_proto_library")
load("//rules:pyext.bzl", "pyext_cc_library")
package(default_visibility = ["//visibility:public"])

pyext_cc_library(
    name = "pyext",
    src = "@com_google_protobuf//:protobuf_python",
    library = "_message.so",
)

cc_library(
    name = "python_support",
    hdrs = ["python_support.h"],
    srcs = ["python_support.cc"],

    deps = [
        #":pyext",
        "@com_google_protobuf//:protobuf",
        "@com_google_protobuf//python:proto_api",
        "@pybind11",
    ],
)

proto_library(
    name = "gui_extension_proto",
    srcs = ["gui_extension.proto"],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
    ],
)

cc_proto_library(
    name = "gui_extension",
    deps = [":gui_extension_proto"],
)

proto_library(
    name = "example_proto",
    srcs = ["example.proto"],
)

cc_proto_library(
    name = "example_cc",
    deps = [":example_proto"],
)

py_proto_library(
    name = "example_py",
    deps = [":example_proto"],
)
